# luftwaffle

./: .gitignore  CMakeLists.txt  rollfile
asset/texture/: arrow.tga  bomb.tga  common.adesc  explosion_cloud.tga  explosion_particle_orange.tga  explosion_particle_red.tga  explosion_particle_yellow.tga  goring.tga  goring_gun.tga  hitler.tga  hitler_gun.tga  laser.tga  midwaffle.tga  missile.tga  player.tga  player_gun.tga  smoke.tga  toaster.tga  waffle1.tga  waffle1gun.tga
src/: asset.cpp  asset.hpp  luftwaffle.hpp  main.cpp  objectdb.hpp  objectpool.hpp  world.cpp  world.hpp  worldobject.cpp  worldobject.hpp
src/component/: atlas_renderable.hpp  attack.hpp  bomb.hpp  component.cpp  component.hpp  componentdb.hpp  explosion_arm.hpp  explosion_cloud.hpp  explosion_particle.hpp  glow_renderable.hpp  goring.hpp  health.hpp  hitler.hpp  laser.hpp  lasergun.hpp  missile.hpp  particle_laser.hpp  particle_smoke.hpp  physical.hpp  player.hpp  toaster.hpp  waffle.hpp  wander.hpp
src/entity/: entity.cpp  entity.hpp  laser.cpp  player.cpp  toaster.cpp  waffle.cpp
src/render/: glow.cpp  glow.frag  glow.vert  quad.cpp  quad.frag  quad.vert  renderer.cpp  renderer.hpp
src/system/: attack.cpp  bomb.cpp  explosion_arm.cpp  explosion_cloud.cpp  explosion_particle.cpp  goring.cpp  hitler.cpp  laser.cpp  lasergun.cpp  missile.cpp  particle_laser.cpp  particle_smoke.cpp  player.cpp  system.hpp  toaster.cpp  waffle.cpp  wander.cpp
win/src/: utility.cpp  utility.h
